# mlops

./: .gitignore  .pre-commit-config.yaml  .pyproject.toml.swp  1.joblib  README.md  data.csv.dvc  edit.dvc  model.onnx  pred.csv  pyproject.toml  run_server.py  server.sh  test_server.py  token.json
.dvc/: config
conf/: config.yaml
mlops/: infer.py  model.py  pred.csv  train.py
mlruns/0/: meta.yaml
mlruns/0/1ac957e967204384885987bb4c23e977/: meta.yaml
mlruns/0/1ac957e967204384885987bb4c23e977/metrics/: MAPE  RMSE  max error
mlruns/0/1ac957e967204384885987bb4c23e977/params/: mlflow
mlruns/0/1ac957e967204384885987bb4c23e977/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/0/29ab3cd12c3f48f49446aabed594a8a0/: meta.yaml
mlruns/0/29ab3cd12c3f48f49446aabed594a8a0/metrics/: MAPE  RMSE  max error
mlruns/0/29ab3cd12c3f48f49446aabed594a8a0/tags/: mlflow.runName
mlruns/0/4a2d3315b3004f768cbb601f8dee8606/: meta.yaml
mlruns/0/4a2d3315b3004f768cbb601f8dee8606/metrics/: MAPE  RMSE  max error
mlruns/0/53de31024b0c48d7b6e25e6bcb898fac/: meta.yaml
mlruns/0/59600e0395214fe2ae3306a4cb8582c5/: meta.yaml
mlruns/0/8b9d3237b6394316a06d9b8b99ebf6a1/: meta.yaml
mlruns/0/91db7f25fd9f46fab21276208ed3d15a/: meta.yaml
mlruns/0/9a5cb7d261904fe88ec5a24cfa156a15/: meta.yaml
mlruns/0/b8bd3b49939840aaacd0abd8b17fafc4/: meta.yaml
mlruns/0/bce527e05c724f0680d205a146a75a9b/: meta.yaml
onnx_model/: MLmodel  conda.yaml  model.onnx  python_env.yaml  requirements.txt
tr_server/: docker-compose.yaml  mlflow.conf
(+76 files in other folders)
