[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Artemii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
joblib = "^1.3.2"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
